--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -573,8 +573,8 @@
     position: relative;
     display: block;
     width: 150px;
-    height: 40px;
 
+    padding: 5px 10px;
     border-radius: 0.5em;
     background: #ffffff;
     border: 1px solid #e8e8e8;
@@ -585,7 +585,6 @@
 
 
     font-size: 13px;
-    line-height: 40px;
     font-weight: 500;
     transition: 0.5s;
 
