--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -25,7 +25,7 @@
         position: static;
         display: flex;
         flex-direction: column;
-        gap: 10px;
+        gap: 0px;
         width: auto;
         margin: 0 30px;
     }
@@ -680,6 +680,7 @@
 
 @media (max-width: 768px) {
 
+
     .section .inner {
         justify-content: space-between;
         width: auto;
@@ -703,7 +704,6 @@
         min-height: 200px;
         
     }
-
 
     .section .description .txt_row {
 
@@ -767,6 +767,8 @@
         line-height: 30px;
         width: auto;
 
+        padding: 5px 0 0 0;
+        margin-top: -40px;
 
     }
 
